# SMIT-Assistant-tutor

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
ai-tutor-frontend/: package-lock.json  package.json  start-complete.ps1  start.bat  tailwind.config.ts
ai-tutor-frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ai-tutor-frontend/src/app/dashboard/: page.tsx
ai-tutor-frontend/src/app/grade/: page.tsx
ai-tutor-frontend/src/app/login/: page.tsx
ai-tutor-frontend/src/app/register/: page.tsx
ai-tutor-frontend/src/app/result/: page.tsx
ai-tutor-frontend/src/components/auth/: ProtectedRoute.tsx
ai-tutor-frontend/src/components/effects/: Background.tsx
ai-tutor-frontend/src/components/layout/: Navbar.tsx  SmoothScroll.tsx
ai-tutor-frontend/src/components/sections/: AgentDemo.tsx  CTA.tsx  Features.tsx  Footer.tsx  Hero3D.tsx  HowItWorks.tsx
ai-tutor-frontend/src/contexts/: AuthContext.tsx
ai-tutor-frontend/src/hooks/: useScrollAnimations.ts  useTheme.ts
ai-tutor-frontend/src/lib/: auth.ts
api/: index.py  main.py
examples/: sample_assignment.md  sample_class_notes.txt  sample_common_mistakes.txt  sample_output.txt  sample_rubric.md  sample_submission.py
spec/: agent_spec.md  feedback_spec.md  grading_rubric_spec.md
src/: auth.py  config.py  context_windows.py  demo_grader.py  guardrails.py  knowledge_base.py  models.py  quadrants.py  session_store.py
src/agents/: chatbot.py  teaching_assistant.py
src/tools/: code_analysis.py
tests/: conftest.py  test_all.py
(+4 files in other folders)
